<resources>
    <string name="app_name">chatup</string>
    <string name="app_name_title">ChatUp</string>
    <string name="login_email">Login With Email</string>
    <string name="login_google">Login with Google</string>
    <string name="welcome">Welcome to ChatUp</string>
    <string name="welcome_desc">Because we are here to make life easier</string>
    <string name="click_to_continue">Click to continue</string>
    <string name="or">or</string>
    <string name="invitation">Welcome your folks too!</string>
    <string name="login">Please Login!</string>
    <string name="control_notifications">Take control of your Notifications</string>
    <string name="login_page_intro">Sign In </string>
    <string name="permission_request">Please give permission after sign in</string>
    <string name="user_profile">User Profile </string>
    <string name="enter_first_name">Email id</string>
    <string name="enter_last_name">Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Confirm Password</string>
    <string name="click_to_signin_manually">Click to Enter email and password</string>
    <string name="register_profile">Register your profile</string>
    <string name="login_via_email">Login via Email</string>
    <string name="enter_phone">Enter phone number</string>
    <string name="verification_code">Get Verification Code</string>
    <string name="get_verfication_code">Enter code received</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="app_bio">Bio</string>
    <string name="check_details">Please check your details</string>
    <string name="save_continue">Save and Continue</string>
    <string name="settings">Settings</string>
    <string name="user_name">Username</string>
    <string name="request_phone_number">Phone number please!!</string>
    <string name="invite">Invite</string>
    <string name="no_users_found">No users found!</string>

    <!--TODO:Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_users_and_chats">UsersAndChatsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_refresh">refresh</string>
    <string name="none_paired">None Paired</string>
    <string name="scanning">Scanning</string>
    <string name="select_device">Select Device</string>
    <string name="none_found">None Found</string>
    <string name="not_connected">Not Connected</string>
    <string name="title_connected_to">Connected to</string>
    <string name="title_connecting">Connecting</string>
    <string name="title_not_connected">Connected</string>
    <string name="bt_not_enabled_leaving">BT not enabled</string>
    <string name="secure_connect">Secure Connect</string>
    <string name="insecure_connect">Insert Connect</string>
    <string name="discoverable">Discoverable</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other devices</string>
    <string name="sample_show_log">Show Log</string>
    <string name="send">Send</string>
    <string name="faq_open_settings">How to open Settings?</string>
    <string name="faq_open_settings_desc">Click on the menu bar in Chats or Users page and in the option click Settings.</string>
    <string name="faq_change_profile">How to change profile?</string>
    <string name="faq_change_profile_desc">Go to \"Edit Profile\" options in Settings and edit your profile </string>
    <string name="feedback_intro">Your feedback is of utmost importance to us. Please pose your opinions in order to help us grow. </string>
    <string name="feedback_desc">Enter your feedback here.</string>
    <string name="feedback">Show us some love!</string>
    <string name="feedback_reques">Click here to give feedback</string>
    <string name="faq">FAQ</string>
    <string name="faq_desc">This page has possible FAQ. In case you don\'t find answers then please mail us in the link below </string>
    <string name="link_to_mail"><a href="http://bhavnaharitsa@gmail.com\">Please post questions</a></string>
    <string name="faq_write_feedback">How to write feedback?</string>
    <string name="faq_write_feedback_desc">In Settings, you will find Feedback in the end. Click it to write to us.</string>
    <string name="faq_extra">Do I need anything extra to use this app?</string>
    <string name="faq_extra_desc">All you need is a internet connection and we have made it for you to use via Bluetooth too</string>
    <string name="faq_send_message">Can I send my messages outside the app</string>
    <string name="faq_send_message_desc">You sure can. Click the share button near the arrow button.</string>
    <string name="faq_dark_mode">Can I enable dark mode?</string>
    <string name="faq_dark_mode_desc">Go to settings and click on dark mode to enable dark mode</string>
    <string name="faq_enable_fingerprint">How to enable finger print?</string>
    <string name="faq_enable_finger_print_desc">Long press on that chat and register your finger to enable finger print</string>
    <string name="faq_post_questions">Post your question and if it is frequently, we might add it in our FAQ section ;)</string>
    <string name="local_img_uri">local_img_uri</string>
    <string name="msg_token_fmt">Token: %s</string>
    <string name="msg_subscribed">Successfully subscribed</string>
    <string name="msg_subscribe_failed">Subscribe failed</string>
    <string name="invitation_title">Invite</string>
    <string name="invitation_message">Hey, i found this terrific app Try it out!!</string>
    <string name="desc1">Connect around the world!</string>
    <string name="desc1_1">ChatUp allows you to connect around the entire world</string>
    <string name="desc2">Invite your friends als and enjoy the perks!!</string>
    <string name="desc3">Share stuff to people</string>
    <string name="desc4">And many more coming up, just for you!!</string>
    <string name="key_enable_dark_mode">dark_mode</string>
    <string name="summary_upload_over_wifi">This enables dark mode</string>
    <string name="title_auto_upload">Dark Mode</string>
    <string name="hint_enter_a_message">Type here..</string>
    <string name="date_header_today">Today</string>
    <string name="date_header_yesterday">Yesterday</string>
    <string name="empty_view_desc">Once people start joining Chat app, you can view the list of those users here.</string>
</resources>
