<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneAuthentication"
    android:orientation="vertical"
    android:background="@color/tint_blue">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="378dp"
            android:layout_height="41dp"
            android:background="@drawable/rounded_background_white"
            android:ems="10"
            android:hint="@string/enter_phone"/>

        <Button
            android:id="@+id/buttonGetVerificationCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verification_code"
            android:textAllCaps="false"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editTextCode"
            android:layout_width="378dp"
            android:layout_height="41dp"
            android:background="@drawable/rounded_background_white"
            android:digits="0123456789"
            android:hint="@string/get_verfication_code"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="10dp"/>
    </LinearLayout>


</LinearLayout>