<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Feedback"
    android:orientation="vertical"
    android:background="?android:attr/colorBackground">



    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/Animation_Id"
        app:lottie_autoPlay="true"
        android:layout_marginTop="10dp"
        app:lottie_loop="true"
        android:layout_gravity="center"
        app:lottie_fileName="heart.json"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/font_family"
        android:text="@string/feedback"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/medium_large_text"
        android:textStyle="bold" />

    <TextView
        android:layout_width="366dp"
        android:layout_height="145dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/font_family"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:text="@string/feedback_intro"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/medium_text" />

    <Button
        android:id="@+id/FeedbackMail"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_background_blue"
        android:drawableRight="@drawable/ic_arrow_white"
        android:fontFamily="@font/font_family"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/feedback_reques"
        android:textColor="@color/white"
        android:textSize="15dp" />




</LinearLayout>