<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:background="@color/tint_blue"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_profile"
        android:textSize="@dimen/medium_text"
        android:fontFamily="@font/font_family"
        android:textColor="@color/olive_green"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="398dp"
        android:layout_height="198dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/UserPhoto"
            android:layout_width="208dp"
            android:layout_height="201dp"
            android:layout_gravity="center"
            android:layout_marginStart="93dp"
            android:layout_marginEnd="97dp"
            android:src="@drawable/userphoto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/UserName"
            android:layout_width="269dp"
            android:layout_height="45dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="94dp"
            android:background="@drawable/rounded_background_white"
            android:nextFocusForward="@id/LastName"
            android:imeOptions="actionNext"
            android:drawableLeft="@drawable/ic_person_black"
            android:drawablePadding="@dimen/padding_text"
            android:hint="@string/enter_first_name"
            android:textSize="@dimen/small_medium_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/LastName"
            android:layout_width="269dp"
            android:layout_height="45dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="94dp"
            android:background="@drawable/rounded_background_white"
            android:drawableLeft="@drawable/ic_person_black"
            android:drawablePadding="@dimen/padding_text"
            android:hint="@string/enter_last_name"
            android:textSize="@dimen/small_medium_text"
            android:nextFocusForward="@id/Password"
            android:imeOptions="actionNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/UserName" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="269dp"
            android:layout_height="45dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="94dp"
            android:background="@drawable/rounded_background_white"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/padding_text"
            android:hint="@string/enter_password"
            android:textSize="@dimen/small_medium_text"
            android:nextFocusForward="@id/ConfirmPassword"
            android:imeOptions="actionNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LastName" />

        <EditText
            android:id="@+id/ConfirmPassword"
            android:layout_width="269dp"
            android:layout_height="45dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="94dp"
            android:drawablePadding="@dimen/padding_text"
            android:background="@drawable/rounded_background_white"
            android:hint="@string/enter_confirm_password"
            android:imeOptions="actionNext"
            android:textSize="@dimen/small_medium_text"
            android:drawableLeft="@drawable/ic_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Password" />

        <Button
            android:id="@+id/ProfileButton"
            android:layout_width="175dp"
            android:layout_height="44dp"
            android:layout_marginStart="107dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="129dp"
            android:background="@drawable/rounded_button"
            android:elevation="30dp"
            android:text="@string/click_to_continue"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ConfirmPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>